objects/Account.object
<CustomObject>
    <fields>
        <fullName>AR_Date_Test__c</fullName>
        <description>new test field for demo</description>
        <label>AR_Date_Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Birth_Year__c)),NOT(ISNULL(Birth_Year__c))), (Year(TODAY()) - Birth_Year__c), 0)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Geocode_Accuracy__c</fullName>
        <label>Billing Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <label>Birth Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Branch__c</fullName>
        <formula>Primary_Book__r.Book_Owner_Team_Member__r.Book_Branch_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Branch Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Line_of_Business__c</fullName>
        <formula>Primary_Book__r.Business_Line_Description__c</formula>
        <label>Book Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Owner2__c</fullName>
        <description>Book Owner Team Member with Phone &amp; Email Information</description>
        <formula>Primary_Book__r.Book_Owner_Team_Member__r.Employee_First_Name__c &amp;&quot; &quot;&amp; Primary_Book__r.Book_Owner_Team_Member__r.Team_Member_Last_Name__c 
 &amp;&quot; | 📞 &quot;&amp;
Primary_Book__r.Book_Owner_Team_Member__r.Phone__c 
&amp;
IF(ISBLANK(Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c),
NULL,
&quot; | &quot;&amp;
HYPERLINK(&quot;mailto:&quot;&amp; Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c, Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c, &quot;_self&quot;)
)</formula>
        <label>Book Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Owner_Email__c</fullName>
        <formula>Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c</formula>
        <label>Book Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Owner__c</fullName>
        <formula>Primary_Book__r.Book_Owner_Team_Member__r.Employee_First_Name__c &amp;&quot; &quot;&amp;  Primary_Book__r.Book_Owner_Team_Member__r.Team_Member_Last_Name__c</formula>
        <label>Book Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_ID__c</fullName>
        <label>CO ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Flag__c</fullName>
        <formula>&apos;/resource/1516170651000/BooksImage&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Citizenship Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Type__c</fullName>
        <label>Consent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Detail_Record_Header__c</fullName>
        <formula>IF(IsPersonAccount,
IF(IsPersonAccount ,
           FirstName&amp;&quot; &quot;&amp;LastName,
           Name)
&amp;&quot; &quot;&amp;

IF(TEXT(Segmentation__c) == &quot;The Private Bank&quot;,IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000RJTV&amp;oid=00D2F0000009PVk&amp;lastMod=1502175131000&quot;, &quot;The Private Bank&quot;),
IF(TEXT(Segmentation__c) == &quot;High Value Customer&quot; || TEXT(Segmentation__c) == &quot;High Value Customer 03&quot; || TEXT(Segmentation__c) == &quot;High Value Customer 04&quot; || TEXT(Segmentation__c) == &quot;High Value Customer 05&quot;,
CASE(Segmentation__c  ,
   &quot;High Value Customer&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000RJ0x&amp;oid=00D2F0000009PVk&amp;lastMod=1502175153000&quot;, &quot;High Value Customer&quot;),
   &quot;High Value Customer 03&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000ZYeS&amp;oid=00D2F0000009PVk&amp;lastMod=1502175206000&quot;, &quot;High Value Customer 03&quot;),
   &quot;High Value Customer 04&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000ZYeT&amp;oid=00D2F0000009PVk&amp;lastMod=1502175234000&quot;, &quot;High Value Customer 04&quot;),
   &quot;High Value Customer 05&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000ZYeU&amp;oid=00D2F0000009PVk&amp;lastMod=1502175257000&quot;, &quot;High Value Customer 05&quot;),
   &quot;&quot;),
   IF(TEXT(Segmentation__c) == &quot;WFA High Value Client&quot;,IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000RJTQ&amp;oid=00D2F0000009PVk&amp;lastMod=1502175943000&quot;, &quot;WFA High Value Client&quot;), &quot;&quot;  ))),
   
   IF(IsPersonAccount ,
           FirstName&amp;&quot; &quot;&amp;LastName,
           Name)
&amp;&quot; &quot;&amp;
 IF(Primary_Book__r.Business_Line_Description__c == &quot;BUSINESS BANKING&quot; ,IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000ZYeb&amp;oid=00D2F0000009PVk&amp;lastMod=1502175131000&quot;,&quot;Business Banking&quot;), 
CASE(Segmentation__c, 
&quot;Business Banking&quot; ,IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000ZYeb&amp;oid=00D2F0000009PVk&amp;lastMod=1502175131000&quot;,&quot;Business Banking&quot;), 
&quot;The Private Bank&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000RJTV&amp;oid=00D2F0000009PVk&amp;lastMod=1502175131000&quot;, &quot;The Private Bank&quot;), 
&quot;WFA High Value Client&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000RJTQ&amp;oid=00D2F0000009PVk&amp;lastMod=1502175943000&quot;, &quot;WFA High Value Client&quot;),
&quot;&quot;) ))&amp;&quot; &quot;&amp;IF(Second_Segmentation__c == &quot;Premier Banking&quot;,IMAGE(&quot;/servlet/servlet.ImageServer?id=0156A000000ZYeZ&amp;oid=00D2F0000009PVk&amp;lastMod=1502175620000&quot;, &quot;Premier Banking&quot;),&quot;&quot;)</formula>
        <label>Customer Detail Record Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Since_Date__c</fullName>
        <label>Customer Since Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Divested_Customer_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Divested Customer Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECN_Formatted__c</fullName>
        <externalId>true</externalId>
        <label>ECN Formatted</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECN__c</fullName>
        <externalId>true</externalId>
        <label>ECN</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Customer_Record__c</fullName>
        <formula>HYPERLINK(&apos;https://launchpad.cci.wellsfargo.com/svp/&apos;+ TEXT($User.StateCode)+&apos;/&apos;+$User.Accounting_Unit__c+&apos;?SEARCH_TYPE=ECN&amp;forwardProfile=y&amp;cust_no=&apos;+ECN__c+&apos;&amp;signonRedirectResource=/svp/redirect.html&amp;signonRedirectType=html&apos;,&quot;View SVP Record&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Customer Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Value_Code__c</fullName>
        <label>High Value Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HV01</fullName>
                </value>
                <value>
                    <fullName>HV02</fullName>
                </value>
                <value>
                    <fullName>HV03</fullName>
                </value>
                <value>
                    <fullName>HV04</fullName>
                </value>
                <value>
                    <fullName>HV05</fullName>
                </value>
                <value>
                    <fullName>HV06</fullName>
                </value>
                <value>
                    <fullName>HV07</fullName>
                </value>
                <value>
                    <fullName>HV08</fullName>
                </value>
                <value>
                    <fullName>HV09</fullName>
                </value>
                <value>
                    <fullName>HV10</fullName>
                </value>
                <value>
                    <fullName>HV11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Idi__c</fullName>
        <label>Individual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <formula>CASE( Primary_Book__r.Business_Line_Description__c ,
&quot;Premier&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150n00000099Nt&amp;oid=00D0n0000000OxM&amp;lastMod=1502175620000&quot;, &quot;Premier&quot;),
&quot;Small Business&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150n00000099Ow&amp;oid=00D0n0000000OxM&amp;lastMod=1502173206000&quot;, &quot;Small Business&quot;),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preference- Email Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preference_Phone_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preference- Phone Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Book_Assignment_Effective_Date__c</fullName>
        <label>Primary Book Assignment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Book_Assignment_Expiration_Date__c</fullName>
        <label>Primary Book Assignment Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Book_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Book Old</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Accounts (Previous Primary Book)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Relationship_Contact__c</fullName>
        <formula>Primary_Book__r.Book_Owner_Team_Member__r.Employee_First_Name__c 
&amp; &apos; &apos; &amp; Primary_Book__r.Book_Owner_Team_Member__r.Team_Member_Last_Name__c 
&amp;
IF(
   OR(
     ISNULL( Primary_Book__r.Book_Owner_Team_Member__r.Phone__c ),
     ISBLANK( Primary_Book__r.Book_Owner_Team_Member__r.Phone__c )),
  &apos;&apos;,
  &apos; | 📞 &apos; &amp; Primary_Book__r.Book_Owner_Team_Member__r.Phone__c )
&amp;
BR()
&amp;
IF(
   OR(
     ISNULL( Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c ),
     ISBLANK( Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c )),
   &apos;&apos;,
   &apos; | &apos; &amp; HYPERLINK(&quot;mailto:&quot;&amp; Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c ,  
           Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c , &quot;_self&quot;)
   )</formula>
        <label>Primary Relationship Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Steward_Contact_Name__c</fullName>
        <label>Relationship Steward Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Steward_Email_Address__c</fullName>
        <label>Relationship Steward Email Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Steward_Phone_Number__c</fullName>
        <label>Relationship Steward Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Steward_Portfolio_ID__c</fullName>
        <label>Relationship Steward Portfolio ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Steward_Team_Member_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Steward (Team Member) Old</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts (Relationship Steward (Team Member) Old)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Steward_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Steward (Team Member)</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Steward_User_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Steward (User) Old</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Steward_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Steward (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Segmentation__c</fullName>
        <label>Second Segmentation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <defaultValue>&quot;Non HV&quot;</defaultValue>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Line 1</fullName>
                </value>
                <value>
                    <fullName>Business Line 2</fullName>
                </value>
                <value>
                    <fullName>The Private Bank</fullName>
                </value>
                <value>
                    <fullName>High Value Customer 03</fullName>
                </value>
                <value>
                    <fullName>High Value Customer 04</fullName>
                </value>
                <value>
                    <fullName>High Value Customer 05</fullName>
                </value>
                <value>
                    <fullName>High Value Customer</fullName>
                </value>
                <value>
                    <fullName>WFA High Value Client</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
                <value>
                    <fullName>WholeSale</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>Regional Private Bank customer</fullName>
                </value>
                <value>
                    <fullName>PREMIER BANKING</fullName>
                    <isActive>false</isActive>
                    <label>PREMIER BANKING</label>
                </value>
                <value>
                    <fullName>RETAIL BANKING</fullName>
                    <isActive>false</isActive>
                    <label>RETAIL BANKING</label>
                </value>
                <value>
                    <fullName>SMALL BUSINESS BANKING</fullName>
                    <isActive>false</isActive>
                    <label>SMALL BUSINESS BANKING</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Purgeable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member_Flag__c</fullName>
        <label>Team Member Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Non-Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Trade_Amount__c</fullName>
        <label>Total Trade Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_Code__c</fullName>
        <label>Type Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default_Account_Type</fullName>
        <active>true</active>
        <description>Set up to get Person Accounts activated</description>
        <label>Default Account Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>